Ionic SQL >>> Maestro | Detalle | Favorito

--- a/src/app/dashboard-user/dashboard-user.page.html
+++ b/src/app/dashboard-user/dashboard-user.page.html
@@ -33,7 +33,12 @@
                   Reservas Taller
                 </a>
               </li>
-   
+              <li>
+                <a routerLink="/product-favorite" class="nav-link text-white">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+                  Favoritos
+                </a>
+              </li>
             </ul>
             <div style="position:fixed; bottom:50px;">
               <hr>
