--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -13,7 +13,7 @@
         <a ref="" class="btn">Añadir</a>
       </div>
       <div (click)="ver()" class="btn-color ">
-        <a ref="" class="btn">Ver</a>
+        <a ref="" class="btn">Detalles</a>
       </div>
     </div>
 
